Get Swagger up to date and introduce open-api fetch in the frontend
