# swagger/v1/swagger.yaml
@@ -33,38 +33,52 @@ components:
       properties:
         user_id:
           type: string
-        event_ids:
-          type: array
-          items:
-            type: string
-            format: EventId
+        competing:
+          type: object
+          properties:
+            event_ids:
+              type: array
+              items:
+                type: string
+                format: EventId
+          required:
+          - event_ids
       required:
       - user_id
-      - event_ids
+      - competing
     registrationAdmin:
       type: object
       properties:
         user_id:
           type: string
-        event_ids:
-          type: array
-          items:
-            type: string
-            format: EventId
-        comment:
-          type: string
-          nullable: true
-        admin_comment:
-          type: string
-          nullable: true
+        competing:
+          type: object
+          properties:
+            event_ids:
+              type: array
+              items:
+                type: string
+                format: EventId
+            registered_on:
+              type: string
+            registration_status:
+              type: string
+            comment:
+              type: string
+              nullable: true
+            admin_comment:
+              type: string
+              nullable: true
+          required:
+          - event_ids
+          - registered_on
+          - registration_status
         guests:
           type: number
           nullable: true
-        email:
-          type: string
       required:
       - user_id
-      - event_ids
+      - competing
     submitRegistrationBody:
       properties:
         user_id:
@@ -117,31 +131,13 @@ paths:
           type: string
       responses:
         '200':
-          description: PASSING comp service down but registrations exist
+          description: " -> PASSING comp service down but registrations exist"
           content:
             application/json:
               schema:
                 type: array
                 items:
                   "$ref": "#/components/schemas/registration"
-        '404':
-          description: PASSING Competition ID doesnt exist
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/error_response"
-        '500':
-          description: PASSING Competition service unavailable - 500 error
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/error_response"
-        '502':
-          description: PASSING Competition service unavailable - 502 error
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/error_response"
   "/api/v1/registrations/{competition_id}/admin":
     get:
       summary: 'Public: list registrations for a given competition_id'
@@ -155,7 +151,7 @@ paths:
           type: string
       responses:
         '200':
-          description: PASSING organizer has access to comp 2
+          description: " -> PASSING organizer has access to comp 2"
           content:
             application/json:
               schema:
@@ -163,8 +159,12 @@ paths:
                 items:
                   "$ref": "#/components/schemas/registrationAdmin"
         '401':
-          description: PASSING organizer cannot access registrations for comps they
-            arent organizing - multi comp auth
+          description: " -> PASSING organizer cannot access registrations for comps
+            they arent organizing - multi comp auth"
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
   "/api/v1/register":
     post:
       summary: Add an attendee registration
@@ -173,19 +173,88 @@ paths:
       parameters: []
       responses:
         '202':
-          description: PASSING only required fields included
+          description: "-> PASSING competitor submits basic registration"
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/success_response"
         '401':
-          description: PASSING user impersonation (no admin permission, JWWT token
-            user_id does not match registration user_id)
+          description: " -> PASSING user impersonation (no admin permission, JWT token
+            user_id does not match registration user_id)"
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
+        '422':
+          description: PASSING user registration exceeds guest limit
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
         '403':
-          description: PASSING comp not open
+          description: " -> PASSING user cant register while registration is closed"
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
         '400':
-          description: PASSING empty payload provided
+          description: " -> PASSING empty payload provided"
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
+        '404':
+          description: " -> PASSING competition does not exist"
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
       requestBody:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/registration"
+              "$ref": "#/components/schemas/submitRegistrationBody"
+        required: true
+    patch:
+      summary: update or cancel an attendee registration
+      security:
+      - Bearer: {}
+      parameters: []
+      responses:
+        '200':
+          description: PASSING user changes comment
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  registration:
+                    "$ref": "#/components/schemas/registrationAdmin"
+        '422':
+          description: PASSING user does not include required comment
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
+        '401':
+          description: PASSING user requests invalid status change to their own reg
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
+        '403':
+          description: PASSING user changes events / other stuff past deadline
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_response"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/updateRegistrationBody"
         required: true
 servers:
 - url: https://{defaultHost}
